craete fetch.js file and inside it create class FetchRequest and translate my code to oojs

--- a/book-collection-frontend/index.html
+++ b/book-collection-frontend/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    
+    <script type="application/javascript" src="src/fetch.js" charset="UTF-8"></script>
     <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
     <title>Books Collection JS APP</title>
   </head>
   <body>
+
       <div class="container" id="container">
 
           <div id="fake-login-form">
@@ -18,7 +21,7 @@
           </div>
 
           <div id="book-form">
-              <!-- insert your form to create new book -->
+              <!-- create your form to create new book -->
           </div>
 
           <div id="books-container">
