add css to my app

--- a/book-collection-frontend/index.html
+++ b/book-collection-frontend/index.html
@@ -12,9 +12,10 @@
   </head>
   <body>
 
-      <div class="container" id="container">
-
-          <div id="fake-login-form">
+      <div class="container" id="container"> 
+        <h1 id="app-title">Welcome to Books Collections APP!</h1>
+          
+        <div id="fake-login-form">
             <form id="form">
                 <label>user_name:</label>
                 <input type="text" id="name">
