update my user create method (backend) to do not accept blank name, also updated findOrCreateUser and fakeLogin methods (frontend) to render error to user

--- a/book-collection-frontend/index.html
+++ b/book-collection-frontend/index.html
@@ -18,7 +18,7 @@
         <div id="fake-login-form">
             <form id="form">
                 <label>user_name:</label>
-                <input type="text" id="name">
+                <input type="text" id="name", required: true>
                 <input type="submit">
               </form> 
           </div>
