create sortBooks method to sort books alphabetically

--- a/book-collection-frontend/index.html
+++ b/book-collection-frontend/index.html
@@ -28,6 +28,7 @@
           </div>
 
           <div id="books-container">
+            <!-- <button id="sort">sort alphabetically</button> -->
               <!-- fetch request to read all current user books -->
           </div>
 
